interpretador/formflow/FormFlowParser.py
# Generated from FormFlow.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FormFlowParser ( Parser ):

    grammarFileName = "FormFlow.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'form'", "'{'", "'end'", "'}'", "'question'", 
                     "':'", "'text'", "'int'", "'choice'", "'float'", "'min'", 
                     "'max'", "'options'", "','", "'ask_if'", "'=='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "NUM", "STR", "WS" ]

    RULE_formulario = 0
    RULE_question = 1
    RULE_tipo = 2
    RULE_configs = 3

    ruleNames =  [ "formulario", "question", "tipo", "configs" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    ID=17
    NUM=18
    STR=19
    WS=20

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FormularioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FormFlowParser.ID, 0)

        def question(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormFlowParser.QuestionContext)
            else:
                return self.getTypedRuleContext(FormFlowParser.QuestionContext,i)


        def getRuleIndex(self):
            return FormFlowParser.RULE_formulario

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormulario" ):
                listener.enterFormulario(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormulario" ):
                listener.exitFormulario(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormulario" ):
                return visitor.visitFormulario(self)
            else:
                return visitor.visitChildren(self)




    def formulario(self):

        localctx = FormFlowParser.FormularioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_formulario)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 8
            self.match(FormFlowParser.T__0)
            self.state = 9
            self.match(FormFlowParser.ID)
            self.state = 10
            self.match(FormFlowParser.T__1)
            self.state = 14
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 11
                self.question()
                self.state = 16
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 17
            self.match(FormFlowParser.T__2)
            self.state = 18
            self.match(FormFlowParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuestionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FormFlowParser.ID, 0)

        def tipo(self):
            return self.getTypedRuleContext(FormFlowParser.TipoContext,0)


        def STR(self):
            return self.getToken(FormFlowParser.STR, 0)

        def configs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormFlowParser.ConfigsContext)
            else:
                return self.getTypedRuleContext(FormFlowParser.ConfigsContext,i)


        def getRuleIndex(self):
            return FormFlowParser.RULE_question

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuestion" ):
                listener.enterQuestion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuestion" ):
                listener.exitQuestion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuestion" ):
                return visitor.visitQuestion(self)
            else:
                return visitor.visitChildren(self)




    def question(self):

        localctx = FormFlowParser.QuestionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_question)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.match(FormFlowParser.T__4)
            self.state = 21
            self.match(FormFlowParser.ID)
            self.state = 22
            self.match(FormFlowParser.T__5)
            self.state = 23
            self.tipo()
            self.state = 24
            self.match(FormFlowParser.STR)
            self.state = 28
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 47104) != 0):
                self.state = 25
                self.configs()
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormFlowParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = FormFlowParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1920) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConfigsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FormFlowParser.RULE_configs

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ConfigIfContext(ConfigsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormFlowParser.ConfigsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(FormFlowParser.ID, 0)
        def STR(self):
            return self.getToken(FormFlowParser.STR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfigIf" ):
                listener.enterConfigIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfigIf" ):
                listener.exitConfigIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfigIf" ):
                return visitor.visitConfigIf(self)
            else:
                return visitor.visitChildren(self)


    class ConfigMaxContext(ConfigsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormFlowParser.ConfigsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(FormFlowParser.NUM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfigMax" ):
                listener.enterConfigMax(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfigMax" ):
                listener.exitConfigMax(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfigMax" ):
                return visitor.visitConfigMax(self)
            else:
                return visitor.visitChildren(self)


    class ConfigMinContext(ConfigsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormFlowParser.ConfigsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(FormFlowParser.NUM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfigMin" ):
                listener.enterConfigMin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfigMin" ):
                listener.exitConfigMin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfigMin" ):
                return visitor.visitConfigMin(self)
            else:
                return visitor.visitChildren(self)


    class ConfigOptionsContext(ConfigsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FormFlowParser.ConfigsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STR(self, i:int=None):
            if i is None:
                return self.getTokens(FormFlowParser.STR)
            else:
                return self.getToken(FormFlowParser.STR, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfigOptions" ):
                listener.enterConfigOptions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfigOptions" ):
                listener.exitConfigOptions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfigOptions" ):
                return visitor.visitConfigOptions(self)
            else:
                return visitor.visitChildren(self)



    def configs(self):

        localctx = FormFlowParser.ConfigsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_configs)
        self._la = 0 # Token type
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                localctx = FormFlowParser.ConfigMinContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.match(FormFlowParser.T__10)
                self.state = 34
                self.match(FormFlowParser.NUM)
                pass
            elif token in [12]:
                localctx = FormFlowParser.ConfigMaxContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 35
                self.match(FormFlowParser.T__11)
                self.state = 36
                self.match(FormFlowParser.NUM)
                pass
            elif token in [13]:
                localctx = FormFlowParser.ConfigOptionsContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 37
                self.match(FormFlowParser.T__12)
                self.state = 38
                self.match(FormFlowParser.STR)
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 39
                    self.match(FormFlowParser.T__13)
                    self.state = 40
                    self.match(FormFlowParser.STR)
                    self.state = 45
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [15]:
                localctx = FormFlowParser.ConfigIfContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 46
                self.match(FormFlowParser.T__14)
                self.state = 47
                self.match(FormFlowParser.ID)
                self.state = 48
                self.match(FormFlowParser.T__15)
                self.state = 49
                self.match(FormFlowParser.STR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





